se deja en la portada el clippath correcto

--- a/src/css/style.sass
+++ b/src/css/style.sass
@@ -158,8 +158,6 @@ footer
         margin-right: auto
         margin-left: auto
 /*** página de Portada ***/
-#svg_css_ex1
-    height: 40%
 .home main
     margin: 0
     width: 100vw
